// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiReporter Constructor Creates a MultiReporter 1`] = `
MultiReporter {
  "reporters": Array [
    StatsDReporter {
      "client": Client {
        "ephemeral_socket": null,
        "global_tags": undefined,
        "host": "localhost",
        "last_used_timer": null,
        "port": 8125,
        "socket": null,
      },
      "context": Context {
        "globalTags": Object {},
      },
      "format": Object {
        "format": [Function],
      },
    },
    InMemoryReporter {
      "context": Context {
        "globalTags": Object {},
      },
      "format": Object {
        "format": [Function],
      },
      "reports": Array [],
    },
    ConsoleReporter {
      "context": Context {
        "globalTags": Object {},
      },
      "format": Object {
        "format": [Function],
      },
      "output": [Function],
    },
  ],
}
`;

exports[`MultiReporter decrement Reports counter metric 1`] = `
Array [
  Array [
    Array [
      "decrement_test",
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "decrement_test",
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "decrement_test",
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter decrementBy Reports counter metric 1`] = `
Array [
  Array [
    Array [
      "decrement_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "decrement_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "decrement_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter gauge Reports gauge metric 1`] = `
Array [
  Array [
    Array [
      "gauge_test",
      10,
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "gauge_test",
      10,
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "gauge_test",
      10,
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter histogram Reports histogram metric 1`] = `
Array [
  Array [
    Array [
      "histogram_test",
      20,
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "histogram_test",
      20,
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "histogram_test",
      20,
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter increment Reports counter metric 1`] = `
Array [
  Array [
    Array [
      "increment_test",
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "increment_test",
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "increment_test",
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter incrementBy Reports counter metric 1`] = `
Array [
  Array [
    Array [
      "increment_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "increment_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "increment_by_test",
      10,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;

exports[`MultiReporter timing Reports timing metric 1`] = `
Array [
  Array [
    Array [
      "timing_test",
      20,
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "timing_test",
      20,
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
  Array [
    Array [
      "timing_test",
      20,
      0.5,
      Object {
        "tag1": "one",
        "tag2": "two",
      },
    ],
  ],
]
`;
